--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -7,7 +7,7 @@
   height: 650px;
   background-color: burlywood;
   border-radius: 20px;
-  margin: 150px auto;
+  margin: 50px auto;
   box-shadow: 6px 10px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 6px 10px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 6px 10px 5px 0px rgba(0,0,0,0.75);
@@ -133,4 +133,7 @@
 	color:blue;
 	font-size: small;
  position: absolute;
+}
+.smallfont{
+	font-size:smaller;
 }
