--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -30,7 +30,7 @@ margin: 0;}
 }
 .footerinfo{
   width:50%;
-  height:120px;
+  height:110px;
   padding-left: 2em;
   box-sizing: border-box;
   color: white;
@@ -41,9 +41,10 @@ margin: 0;}
   display: flex;
   color: white;
   list-style: none;
+  justify-content: end;
 }
 .footerlist li{
-  width:20%;
+  width:15%;
   height: 100%;
   text-align: center;
   font-size: medium;
@@ -56,4 +57,5 @@ margin: 0;}
   color:white;
   padding-top: 15px;
   box-sizing: border-box;
+  font-size:small;
 }
