--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,8 +1,16 @@
 *{padding: 0;margin: 0;user-select: none;}
 body{
   width: 100%;
-  
+  position:relative;
 }
+header {
+ width:100%;
+  height: 100px;
+  position:fixed;
+  z-index:10;
+background-color: inherit;
+}
+
 .index_header{
   width: 100%;
   height: 50px;
@@ -59,13 +67,13 @@ body{
 content: '';
 background:linear-gradient(to right,gray,transparent);
 position: absolute;
-right: 50%;
+left:0;
 height:100vh;
-width: 50%;
+width: 30%;
 }
 .index_page_btn{
   position: absolute;
-  top: 40%;
+  top: 30%;
   left: 25%;
 }
 .index_page_btn_a {
@@ -79,12 +87,15 @@ width: 50%;
 .index_page_btn_a:hover{
   background-color: rgba(128, 128, 128, 0.692);
 }
+.index_page_btn_a:hover a{
+  color:white;
+}
 .index_page_btn_a a{
   display:block;
   width:100%;
   padding: 25px;
  text-decoration: none;
- color: white;
+ color: gray;
  font-size: larger;
  font-weight: 800
 }
