--- a/src/main/resources/static/css/searchProduct.css
+++ b/src/main/resources/static/css/searchProduct.css
@@ -2,21 +2,23 @@
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 li{
   list-style-type: none;
 }
 
 header {
- 
-  height: 70px;
-  background-size: 100% 100%;
+ width:100%;
+  height: 100px;
+  
 }
 
 
 #main {
-  margin: 0 auto;
+  margin: 50px auto;
   width: 100%;
+  
 
 }
 
@@ -28,7 +30,7 @@ section {
 #container {
   display: flex;
   width: 100%;
-  border: 1px solid gray;
+ 
   background-color: rgb(252, 254, 251);
   justify-content: space-between;
 }
@@ -64,6 +66,8 @@ section {
 #house {
   /* width: 50%; */
   width:1500px;
+  height:1000px;
+  position:relative;
  
   
 
