--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -2,12 +2,17 @@
   padding: 0;
   margin: 0;
 }
+header {
+ width:100%;
+  height: 100px;
+  
+}
 .login-wrapper{
   width: 500px;
   height: 600px;
   background-color: burlywood;
   border-radius: 20px;
-  margin: 150px auto;
+  margin: 50px auto;
   box-shadow: 6px 10px 5px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 6px 10px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 6px 10px 5px 0px rgba(0,0,0,0.75);
